# pdfRAG

./: .gitignore  GEMINI.md
Frontend/: App.jsx  index.css  index.html  package-lock.json  package.json  vite.config.js
backend/: db.py  main.py  pyproject.toml  rag2.py  requirements.txt
