[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "sqlalchemy>=2.0.49",
    "python-multipart",
    "pypdf",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-postgres",
    "psycopg2-binary",
]
